[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/ui/controls/feedback_control.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[node name="FeedbackControl" type="MarginContainer"]
margin_right = 304.0
margin_bottom = 34.0
mouse_filter = 2
size_flags_horizontal = 3
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
margin_right = 379.0
margin_bottom = 34.0
mouse_filter = 2
color = Color( 0.933333, 0.92549, 0.72549, 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 379.0
margin_bottom = 34.0
custom_constants/margin_right = 2
custom_constants/margin_top = 2
custom_constants/margin_left = 2
custom_constants/margin_bottom = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_left = 2.0
margin_top = 2.0
margin_right = 377.0
margin_bottom = 32.0
mouse_filter = 2

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/HBoxContainer"]
margin_right = 28.0
margin_bottom = 30.0
mouse_filter = 2

[node name="Container" type="TextureRect" parent="MarginContainer/HBoxContainer/CenterContainer"]
margin_top = 1.0
margin_right = 28.0
margin_bottom = 29.0
rect_min_size = Vector2( 28, 28 )
texture = ExtResource( 2 )
expand = true
stretch_mode = 1

[node name="Panel" type="Panel" parent="MarginContainer/HBoxContainer"]
margin_left = 32.0
margin_right = 352.0
margin_bottom = 30.0
rect_min_size = Vector2( 320, 28 )
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/margin_left = 2

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/Panel/MarginContainer"]
margin_left = 2.0
margin_top = 8.0
margin_right = 320.0
margin_bottom = 22.0
text = "FEEDBACK GOES HERE"
valign = 1

[node name="Button_DeleteEntry" type="Button" parent="MarginContainer/HBoxContainer"]
margin_left = 356.0
margin_right = 375.0
margin_bottom = 30.0
text = "x"

[connection signal="mouse_entered" from="MarginContainer" to="." method="_on_FeedbackControl_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer" to="." method="_on_FeedbackControl_mouse_exited"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/Button_DeleteEntry" to="." method="_on_Button_DeleteEntry_pressed"]
